--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -200,14 +200,14 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 453
+          "height": 240
         },
-        "outputId": "555d88b2-4ba8-4a6d-d31d-a49b02d84c84"
+        "outputId": "2b609d85-f43e-4e16-f3e3-dfae40dedc94"
       },
       "source": [
-        "df"
+        "df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,404 +603,85 @@
               "      <td>NaN</td>\n",
               "      <td>True</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>418</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>8/27/2019</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>6.00</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>17.0</td>\n",
-              "      <td>20.5</td>\n",
-              "      <td>0.57</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>3.5</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>419</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>8/27/2019</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>6.00</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>19.0</td>\n",
-              "      <td>26.0</td>\n",
-              "      <td>1.02</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>3.5</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>True</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>420</th>\n",
-              "      <td>California</td>\n",
-              "      <td>8/27/2019</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>7.90</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>20.0</td>\n",
-              "      <td>22.0</td>\n",
-              "      <td>0.77</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>3.7</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>3.5</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>4.5</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>421</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>8/27/2019</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>7.90</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>22.5</td>\n",
-              "      <td>24.5</td>\n",
-              "      <td>1.07</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>True</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>422</th>\n",
-              "      <td>Other</td>\n",
-              "      <td>8/27/2019</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>5.50</td>\n",
-              "      <td>3.5</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>17.0</td>\n",
-              "      <td>21.3</td>\n",
-              "      <td>0.61</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>4.3</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>4.9</td>\n",
-              "      <td>3.8</td>\n",
-              "      <td>3.0</td>\n",
-              "      <td>4.5</td>\n",
-              "      <td>4.0</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>True</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>421 rows × 59 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "        Burrito       Date  Yelp  Google  ... Avocado  Corn  Zucchini  Great\n",
-              "0    California  1/18/2016   3.5     4.2  ...     NaN   NaN       NaN  False\n",
-              "1    California  1/24/2016   3.5     3.3  ...     NaN   NaN       NaN  False\n",
-              "2      Carnitas  1/24/2016   NaN     NaN  ...     NaN   NaN       NaN  False\n",
-              "3         Asada  1/24/2016   NaN     NaN  ...     NaN   NaN       NaN  False\n",
-              "4    California  1/27/2016   4.0     3.8  ...     NaN   NaN       NaN   True\n",
-              "..          ...        ...   ...     ...  ...     ...   ...       ...    ...\n",
-              "418       Other  8/27/2019   NaN     NaN  ...     NaN   NaN       NaN  False\n",
-              "419       Other  8/27/2019   NaN     NaN  ...     NaN   NaN       NaN   True\n",
-              "420  California  8/27/2019   NaN     NaN  ...     NaN   NaN       NaN  False\n",
-              "421       Other  8/27/2019   NaN     NaN  ...     NaN   NaN       NaN   True\n",
-              "422       Other  8/27/2019   NaN     NaN  ...     NaN   NaN       NaN   True\n",
+              "      Burrito       Date  Yelp  Google Chips  ...  Sushi  Avocado  Corn  Zucchini  Great\n",
+              "0  California  1/18/2016   3.5     4.2   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "1  California  1/24/2016   3.5     3.3   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "2    Carnitas  1/24/2016   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "3       Asada  1/24/2016   NaN     NaN   NaN  ...    NaN      NaN   NaN       NaN  False\n",
+              "4  California  1/27/2016   4.0     3.8     x  ...    NaN      NaN   NaN       NaN   True\n",
               "\n",
-              "[421 rows x 59 columns]"
+              "[5 rows x 59 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Be62l17O-3MU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c0b00706-df70-438a-c63d-7c97ba0f6d3a"
+      },
+      "source": [
+        "df['Date'].dtype"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('O')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PeG83nHBFMsN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c8937e20-600f-4c90-ac55-44a430c83489"
+      },
+      "source": [
+        "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('<M8[ns]')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     }
