--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -198,16 +198,16 @@
       "metadata": {
         "id": "Y3U2j_6p3kBs",
         "colab_type": "code",
+        "outputId": "4398bfa2-164e-4d97-dd05-773704ef3482",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 240
-        },
-        "outputId": "2b609d85-f43e-4e16-f3e3-dfae40dedc94"
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -621,7 +621,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -630,14 +630,87 @@
       "metadata": {
         "id": "Be62l17O-3MU",
         "colab_type": "code",
+        "outputId": "a8fcf626-9745-416f-fa53-ff91f82840af",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "df['Date'].dtype"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('O')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PeG83nHBFMsN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RDJ0BJXqKsiW",
+        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c0b00706-df70-438a-c63d-7c97ba0f6d3a"
+        "outputId": "3ffdb208-ca7e-4e6d-fc17-b255ff10fb41"
       },
       "source": [
         "df['Date'].dtype"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('<M8[ns]')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VqScq6wmKyo7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 225
+        },
+        "outputId": "5805e021-fe13-464e-eb67-9ac1d63fb04f"
+      },
+      "source": [
+        "df['Date'].dt.year"
       ],
       "execution_count": 11,
       "outputs": [
@@ -645,7 +718,18 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "dtype('O')"
+              "0      2016\n",
+              "1      2016\n",
+              "2      2016\n",
+              "3      2016\n",
+              "4      2016\n",
+              "       ... \n",
+              "418    2019\n",
+              "419    2019\n",
+              "420    2019\n",
+              "421    2019\n",
+              "422    2019\n",
+              "Name: Date, Length: 421, dtype: int64"
             ]
           },
           "metadata": {
@@ -658,32 +742,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PeG83nHBFMsN",
+        "id": "JNTCt_JjK8MT",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c8937e20-600f-4c90-ac55-44a430c83489"
+        "colab": {}
       },
       "source": [
-        "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)"
+        "#Split\n",
+        "validate = df[df['Date'].dt.year == 2017]\n",
+        "train = df[df['Date'].dt.year < 2017]\n",
+        "test = df[df['Date'].dt.year > 2017]"
       ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "dtype('<M8[ns]')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
