--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "Y3U2j_6p3kBs",
         "colab_type": "code",
-        "outputId": "4398bfa2-164e-4d97-dd05-773704ef3482",
+        "outputId": "b031d9d0-5d9c-4693-8df5-adf05d0e4ec5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 240
@@ -630,7 +630,7 @@
       "metadata": {
         "id": "Be62l17O-3MU",
         "colab_type": "code",
-        "outputId": "a8fcf626-9745-416f-fa53-ff91f82840af",
+        "outputId": "abee6948-0472-45f1-9034-ea0208e1258c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -677,7 +677,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3ffdb208-ca7e-4e6d-fc17-b255ff10fb41"
+        "outputId": "78f98469-1745-4590-9108-7b9ed0c59c40"
       },
       "source": [
         "df['Date'].dtype"
@@ -707,7 +707,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 225
         },
-        "outputId": "5805e021-fe13-464e-eb67-9ac1d63fb04f"
+        "outputId": "73cda019-3863-462b-e183-77bda7ce97bf"
       },
       "source": [
         "df['Date'].dt.year"
@@ -747,13 +747,143 @@
         "colab": {}
       },
       "source": [
-        "#Split\n",
+        "#Split 3 ways along years\n",
         "validate = df[df['Date'].dt.year == 2017]\n",
         "train = df[df['Date'].dt.year < 2017]\n",
         "test = df[df['Date'].dt.year > 2017]"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3kvPzIJ0iV9L",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "64ee9577-e85f-41fa-ce48-202a9b5153c3"
+      },
+      "source": [
+        "target = 'Great'\n",
+        "y_train = train[target]\n",
+        "y_train.value_counts()"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False    176\n",
+              "True     122\n",
+              "Name: Great, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CJAN3WXRjDIb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9328171f-3623-497f-ac98-2c976ded88a0"
+      },
+      "source": [
+        "#Calculating Accuracy Baseling for training\n",
+        "176/(176+122)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5906040268456376"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sy_oYVzZqTjt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "5d0c3c46-6ca8-4ce8-af32-7a8d2e2459db"
+      },
+      "source": [
+        "y_val = validate[target]\n",
+        "b = y_val.value_counts()\n",
+        "b"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False    47\n",
+              "True     38\n",
+              "Name: Great, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eq2pnTNlq4A9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0b72d5bf-ef42-4df8-c6d0-9f7fbba030f9"
+      },
+      "source": [
+        "#Accuacy baseline for validation\n",
+        "b[0]/(b[0] + b[1])"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5529411764705883"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     }
   ]
 }
