--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -3580,7 +3580,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#Use scikit-learn for logistic regression."
+        "#Use scikit-learn for logistic regression (this is used for classification not regression (I know confusing)"
       ]
     },
     {
@@ -3892,6 +3892,7 @@
         "outputId": "1ad645f1-437e-4794-db9b-fc15d5d4152e"
       },
       "source": [
+        "#behind the scenes of the predict_proba method\n",
         "sigmoid(log_reg.intercept_ + np.dot(log_reg.coef_, np.transpose(test_case)))"
       ],
       "execution_count": 70,
@@ -3925,13 +3926,25 @@
       "metadata": {
         "id": "30yr8BgFmWbc",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d204ac42-1450-4966-90db-58a885dc773b"
       },
       "source": [
-        ""
+        "print(\"Validation Accuracy\", log_reg.score(X_val_imputed, y_val))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Validation Accuracy 0.5058823529411764\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3948,13 +3961,240 @@
       "metadata": {
         "id": "CcOnEbPh3xOW",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 258
+        },
+        "outputId": "b2a42ec8-beb4-4fac-8549-7f015cfa3a95"
       },
       "source": [
-        ""
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "\n",
+        "#3. Arrange X feature matrices\n",
+        "X_test = df_test[features]\n",
+        "y_test = df_test[target]\n",
+        "\n",
+        "#impute missing values\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "imputer = SimpleImputer()\n",
+        "X_test_imp = imputer.fit_transform(X_test)\n",
+        "\n",
+        "log_reg.fit(X_test_imp, y_test)\n",
+        "\n",
+        "#convert to DataFrame\n",
+        "#X_test_imp = pd.DataFrame(X_test_imp, columns=X_test.columns)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "THXVg_ykiRgP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "f303ea53-361e-4793-910b-0ef1b039e50c"
+      },
+      "source": [
+        "X_test_imp.head()"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Yelp</th>\n",
+              "      <th>Google</th>\n",
+              "      <th>Cost</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3.833333</td>\n",
+              "      <td>3.966667</td>\n",
+              "      <td>8.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3.833333</td>\n",
+              "      <td>3.966667</td>\n",
+              "      <td>7.25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>4.500000</td>\n",
+              "      <td>3.800000</td>\n",
+              "      <td>4.19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>3.500000</td>\n",
+              "      <td>4.300000</td>\n",
+              "      <td>7.00</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>3.833333</td>\n",
+              "      <td>3.966667</td>\n",
+              "      <td>8.50</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       Yelp    Google  Cost\n",
+              "0  3.833333  3.966667  8.00\n",
+              "1  3.833333  3.966667  7.25\n",
+              "2  4.500000  3.800000  4.19\n",
+              "3  3.500000  4.300000  7.00\n",
+              "4  3.833333  3.966667  8.50"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n2RKX-HzrwcB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4d2e6d37-5c8b-49d0-9087-7cc90ad633fe"
+      },
+      "source": [
+        "X_test_imp.shape, y_test.shape"
+      ],
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((38, 3), (38,))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bmrGBT0rhDfZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0a986856-da62-4bce-f2df-7b313fc74954"
+      },
+      "source": [
+        "print(\"Test Accuracy\", log_reg.score(X_test_imputed, y_test))"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Accuracy 0.47368421052631576\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H07jnlQUucIg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9f7651e9-2b16-495c-d13d-fcedc7c100bd"
+      },
+      "source": [
+        "#samething as above\n",
+        "y_pred = log_reg.predict(X_test_imp)\n",
+        "print(\"Accuracy score\", accuracy_score(y_pred, y_test))"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Accuracy score 0.47368421052631576\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
